objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Receipt_Text__c</fullName>
        <description>This text will appear as the invoice text</description>
        <inlineHelpText>Enter here the text that will appear in the receipt for donations related to this Campaign</inlineHelpText>
        <label>Receipt Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tfn_npsp_Appeal_Type__c</fullName>
        <label>Appeal Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tied</fullName>
                </value>
                <value>
                    <fullName>Untied</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_npsp_Hierarchy__c</fullName>
        <label>Hierarchy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child Campaign or Appeal</fullName>
                </value>
                <value>
                    <fullName>Parent Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_npsp_RE_Appeal_ID__c</fullName>
        <label>RE Appeal ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_npsp_RE_Appeal_Import_ID__c</fullName>
        <label>RE Appeal Import ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_npsp_TechOne_GL_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TechOne GL Code</label>
        <referenceTo>tfn_Funding_Project__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>